# PONG

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
include/: Ball.h  FPSCounter.h  GameEngine.h  Score.h  ScoreTexts.h  Wall.h
src/: Ball.cpp  CMakeLists.txt  FPSCounter.cpp  GameEngine.cpp  Score.cpp  ScoreTexts.cpp  Wall.cpp  main.cpp
submodules/SDLYogurt/: .clang-tidy  CMakeLists.txt  README.md  REQUIRE.md  SDLYogurt.drawio
submodules/SDLYogurt/.github/workflows/: format.yaml
submodules/SDLYogurt/format/: Dockerfile  format.sh  runFormat.sh
submodules/SDLYogurt/src/core/: Application.cpp  Application.h
submodules/SDLYogurt/src/core/devices/: Device.h  Directions.h  Gamepad.cpp  Gamepad.h
submodules/SDLYogurt/src/core/rendering/: Texture.cpp  Texture.h
submodules/SDLYogurt/src/core/time/: Timer.h
submodules/SDLYogurt/src/game/: Engine.cpp  Engine.h  Object.cpp  Object.h  Physics.cpp  Physics.h
submodules/SDLYogurt/src/gui/GUIElements/: Button.cpp  Button.h  GUIElement.h  Image.cpp  Image.h  Text.cpp  Text.h
submodules/SDLYogurt/src/gui/Windows/: MainWindow.cpp  MainWindow.h  Window.h
